--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,11 @@
       <button type="button" class="menu-button">Add Part</button>
       <button type="button" class="menu-button">Home</button>
     </div>
-    <div class="right-div">Right Div</div>
+    <div class="right-div">
+      <ul id="parts-list">
+        <!-- Parts will be added here -->
+      </ul>
+    </div>
   </div>
 
   <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
