--- a/static/styles.css
+++ b/static/styles.css
@@ -2,9 +2,9 @@
   --text: #d4d4d4;
   --dominant:#333333;  
   --dominant_dark:#222222;
-  --secondary: #1D7546;
-  --secondary_highlight: #328b5d;
-  --accent: #C1B052;
+  --secondary: #C1B052;
+  --secondary_highlight: #9c8d36;
+  --accent: #0d3e24;
 
 }
 
@@ -20,27 +20,30 @@ body{
 }
 
 #logo-container {
+
   width: 100%;
   text-align: center;
   padding-top: 12px;
 }
 #mainBox{
-  display: flex;
+width: 100vw;
+margin: 0px;
 }
 .vertical-menu
 {
-  width: 15%;
   height: 100vh;
-  background-color: var(--secondary);
+  background-color: var(--dominant_dark);
   float: left;
+  padding: 0px;
 }
 
 .menu-button {
   border: none;
   color: var(--accent);
-  background-color: var(--secondary);
+  background-color: var(--dominant_dark);
   padding: 15px 32px;
   width: 100%;
+  color: var(--secondary);
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -50,24 +53,31 @@ body{
 }
 
 .menu-button:hover {
-  background-color: var(--secondary_highlight);
+  background-color: var(--secondary);
   color: var(--dominant);
 }
 
 .homeHeader{
-  background-color: var(--dominant_dark);
+  background-color: var(--accent);
+  border: 2px solid var(--secondary); /* Border style and color */
+  border-radius: 10px; /* Rounded corner radius */
   font-weight: bold;
   height: 60px
 }
 .whiteBorder{
-  border: 2px solid #ccc; /* Border style and color */
+  border: 2px solid var(--accent); /* Border style and color */
   border-radius: 10px; /* Rounded corner radius */
   padding: 20px; /* Add some padding to the div */
   height: 200px;
+  background-color: var(--dominant_dark);
+}
+
+#subPage{
+  padding:0px;
 }
 
 .goldBorder{
-  border: 2px solid var(--accent);
+  border: 2px solid var(--secondary);
   border-radius: 10px; /* Rounded corner radius */
   padding: 20px; /* Add some padding to the div */
   font-size: 1em;
@@ -75,5 +85,4 @@ body{
 
 .subPageContainer {
   padding: 10px;
-  
 }
