--- a/templates/browsePage.html
+++ b/templates/browsePage.html
@@ -7,11 +7,13 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-6 goldBorder">
-      <ul id="parts-list"></ul>
+    <div class="col-8 goldBorder">
+      <div class="container" id="parts-list">
+        
+      </div>
     </div>
-    <div class="col-6 goldBorder">
+    <div class="col-4 goldBorder">
       Dashboard
     </div>
   </div>
-</div>  
+</div>
