--- a/templates/browsePage.html
+++ b/templates/browsePage.html
@@ -10,78 +10,59 @@
     <div class="col-8 goldBorder">
       <div class="container part_list_header">
         <div class="row">
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2 col-md-4 col-6  part_list_header_button">
             <button type="button" class="noMargin">
               R
             </button>
           </div>
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2  col-md-4  col-6  part_list_header_button">
             <button type="button" class="noMargin">
               C
             </button>
           </div>
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2  col-md-4 col-6  part_list_header_button">
             <button type="button" class="noMargin">
               sort
             </button>
           </div>
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2  col-md-4 col-6  part_list_header_button">
             <button type="button" class="noMargin">
               bom search
             </button>
           </div>
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2  col-md-4 col-6  part_list_header_button">
             <button type="button" class="noMargin">
               new
             </button>
           </div>
-          <div class="col-lg-2 part_list_header_button">
+          <div class="col-lg-2 col-md-4  col-6  part_list_header_button">
             <button type="button" class="noMargin">
               delete
             </button>
           </div>
         </div>
       </div>
-      <form id = "part_search_form">
+      <form id="part_search_form">
         <input type="text" id="part_search" name="fname">
       </form>
       <div class="container" id="parts-list">
       </div>
     </div>
     <div class="col-4 goldBorder">
-      <div class="container">
+      <div id="part_entry" class="container part_list_header">
         <div class="row">
-          <div class="col-lg-2">
+          <div class="col-6  part_list_header_button">
             <button type="button" class="noMargin">
               delete
             </button>
           </div>
-          <div class="col-lg-2">
-            <button type="button" class="noMargin">
-
-            </button>
-          </div>
-          <div class="col-lg-2">
-            <button type="button" class="noMargin">
-              hi
-            </button>
-          </div>
-          <div class="col-lg-2">
-            <button type="button" class="noMargin">
-              hi
-            </button>
-          </div>
-          <div class="col-lg-2">
-            <button type="button" class="noMargin">
-              hi
-            </button>
-          </div>
-          <div class="col-lg-2">
+          <div class="col-6  part_list_header_button">
             <button type="button" class="noMargin">
               hi
             </button>
           </div>
         </div>
+
       </div>
     </div>
   </div>
