new, delete, save working

--- a/templates/browsePage.html
+++ b/templates/browsePage.html
@@ -31,12 +31,12 @@
             </button>
           </div>
           <div class="col-lg-2  col-md-4 col-6  part_list_header_button">
-            <button type="button" class="noMargin">
+            <button type="button" class="noMargin" onclick="newPart()">
               new
             </button>
           </div>
           <div class="col-lg-2 col-md-4  col-6  part_list_header_button">
-            <button type="button" class="noMargin">
+            <button type="button" class="noMargin" onclick="deletePart()">
               delete
             </button>
           </div>
