--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     </div>
     <button type="button" class="menu-button" onclick="showHomePage()">Home</button>
     <button type="button" class="menu-button" onclick="showBrowse()">Browse</button>
-    <button type="button" class="menu-button">Add Part</button>
+    <button type="button" class="menu-button">Bom Search</button>
     <button type="button" class="menu-button">Load</button>
   </div>
   <div id="subPage"></div>
