last before update

--- a/templates/browsePage.html
+++ b/templates/browsePage.html
@@ -1,13 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-12 homeHeader">
-      Dashboard
+      BROWSE PARTS
+      <!-- github link -->
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-8 goldBorder">
+    <div class="col-10 goldBorder ease" id = "part_list_column">
       <div class="container part_list_header">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6  part_list_header_button">
@@ -49,7 +50,7 @@
         {{part_list}}
       </div>
     </div>
-    <div class="col-4 goldBorder">
+    <div class="col-2 goldBorder ease" id = "part_entry_column">
       <div id="part_entry" class="container part_list_header">
         <div class="row">
           <div class="col-12  part_list_header_button">
