--- a/static/styles.css
+++ b/static/styles.css
@@ -1,254 +1,318 @@
-:root {
-  --text: #d4d4d4;
-  --dominant: #333333;
-  --dominant_dark: #222222;
-  --secondary: #C1B052;
-  --secondary_highlight: #9c8d36;
-  --accent: #444444;
-  --selected: #fdf0a2;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500&display=swap");
 
+$white: #ffffff;
+$body-background-color: #f4f4f8;
+$navigation-background-color: #030303;
+$navigation-link-color: #9e9fa4;
+$navigation-link-hover-background-color: #313239;
+$navigation-item-height: 45px;
+$navigation-item-border-radius: 5px;
+$navigation-item-tooltip-color: #6b6b6b;
+$navigation-search-background-color: #2c2a30;
+$navigation-search-background-focus-color: #313239;
+$navigation-search-color: $white;
+$navigation-search-icon-size: 25px;
+$navigation-collapse-trigger-color: #408bff;
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
 body {
-  background-color: var(--dominant);
-  color: var(--text);
-  font-size: 1.5em;
-  overflow-y: scroll;
-}
-
-#logo-container img {
-  width: 80%;
-}
-
-#logo-container {
-  width: 100%;
-  text-align: center;
-  padding-top: 12px;
-}
-
-
-#vertical-menu {
-  height: 100vh;
-  background-color: var(--dominant_dark);
-  position: fixed;
-  padding: 0px;
-  display: inline-block;
-  width: 15%;
-}
-
-#subPage {
-  margin-left: 15%;
-  padding: 20px;
-  width: 85%;
-  display: inline-block;
-}
-
-.menu-button {
-  border: none;
-  color: var(--accent);
-  background-color: var(--dominant_dark);
-  padding: 15px 32px;
-  width: 100%;
-  color: var(--secondary);
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-family: "Oswald", serif;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-.menu-button:hover {
-  background-color: var(--secondary);
-  color: var(--dominant);
-}
-
-.homeHeader {
-  background-color: var(--accent);
-  border: 2px solid var(--secondary);
-  border-radius: 10px;
-  font-weight: bold;
-  height: 60px
-}
-
-.whiteBorder {
-  border: 2px solid var(--secondary);
-  border-radius: 10px;
-  padding: 20px;
-  height: 200px;
-  background-color: var(--dominant_dark);
-}
-
-.goldBorder {
-  border: 2px solid var(--secondary);
-  border-radius: 10px;
-  padding: 20px;
-  font-size: 1em;
-}
-
-.subPageContainer {
-  padding: 10px;
-}
-
-#parts-list {
-  font-size: small;
-  padding: 0%;
-}
-
-.list_button {
-  background-color: var(--secondary);
-  color: var(--dominant_dark);
-  border: none;
-  cursor: pointer;
+  background-color: $body-background-color;
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.5;
   font-size: 16px;
-  text-align: center;
-  margin: auto;
-  width: 100%;
-  padding: 0%;
-  white-space: nowrap;
-  /* Prevent text from wrapping */
-  overflow: hidden;
-  /* Hide any overflowing content */
+  min-height: 700px;
 }
 
-button span {
-  border: 1px solid var(--accent);
+// -------------- NAVIGATION CONTAINER
+
+.navigation-container {
+  position: relative;
+  width: 275px;
 }
 
-.list_button:hover {
-  border-width: 2px 0px;
-  border-style: solid;
-  border-color: var(--dominant_dark);
+// -------------- NAVIGATION COLLAPSE TRIGGER
+
+.navigation-collapse-trigger {
+  bottom: 0;
+  position: absolute;
+  right: -10px;
+  top: 0;
+  width: 20px;
+  $this: &;
+  $navigation-collapse-trigger-orb-size: 25px;
+
+  // -------------- ORB
+
+  &__orb {
+    position: absolute;
+    width: $navigation-collapse-trigger-orb-size;
+    height: $navigation-collapse-trigger-orb-size;
+    border-radius: $navigation-collapse-trigger-orb-size;
+    background-color: $navigation-collapse-trigger-color;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    transform: translate(calc(-50% + 2px), 100px) scale(0);
+    transition: all 0.2s ease-out;
+    transition-delay: 0.1s;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    > svg {
+      stroke: $white;
+      width: 80%;
+      height: auto;
+      transition: transform 0.2s ease-out;
+
+      [class$="--collapsed"] & {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  // -------------- HOVER
+
+  &:hover {
+    #{$this}__orb {
+      transform: translate(calc(-50% + 2px), 100px) scale(1);
+    }
+
+    ~ .navigation::before {
+      opacity: 1;
+    }
+  }
 }
 
+// -------------- NAVIGATION
 
-button.list_button:nth-child(even) {
-  background-color: var(--secondary_highlight);
-}
-
-.listHeader {
-  background-color: var(--dominant_dark);
-  color: var(--text);
-  border-color: var(--secondary);
-}
-
-.col-lg-2 {
-  padding: 0%
-}
-
-.part_list_header {
-  padding: 0px 10px 0px 10px;
-}
-
-.part_list_header_button {
+.navigation {
+  background-color: $navigation-background-color;
+  color: $white;
+  height: 90vh;
+  min-height: 650px;
+  padding: 16px;
   display: flex;
-  padding: 0%;
-}
+  flex-direction: column;
+  border-radius: 10px;
 
+  &::before {
+    background: linear-gradient(
+      180deg,
+      rgba($navigation-collapse-trigger-color, 0) 0%,
+      rgba($navigation-collapse-trigger-color, 1) 5%,
+      rgba($navigation-collapse-trigger-color, 1) 95%,
+      rgba($navigation-collapse-trigger-color, 0) 100%
+    );
+    bottom: 0;
+    pointer-events: none;
+    position: absolute;
+    right: -3px;
+    top: 0;
+    width: 2px;
+    content: "";
+    opacity: 0;
+    transition: opacity 0.2s ease-out;
+    transition-delay: 0.1s;
+  }
 
-.part_list_header > .row> :first-child>button {
-  border-top-left-radius: 10px;
-}
-
-@media (max-width: 768px){/*small*/
-  .part_list_header>.row> :nth-child(2) >button {
-    border-top-right-radius: 10px;
+  .logout {
+    margin-top: auto;
   }
 }
-@media (min-width: 768px) and (max-width: 992px)  {
-  .part_list_header>.row> :nth-child(3) >button {
-    border-top-right-radius: 10px;
-  }
-}
-@media (min-width: 992px) {
-  .part_list_header>.row> :last-child >button {
-    border-top-right-radius: 10px;
-  }
-}
 
+// -------------- NAVIGATION LOGO
 
-.part_list_header_button>button {
-  margin: 0px;
-  text-align: center;
+.navigation-logo {
+  color: $white;
   text-decoration: none;
-  display: inline-block;
-  border: none;
-  background-color: var(--secondary);
-  border: 2px solid var(--dominant);
-  color: var(--dominant);
-  width: 100%;
-  font-weight: bold;
-  font-size: 0.8em;
-  min-height: 50px;
-}
-
-.part_list_header_button>button:hover {
-
-  background-color: var(--dominant);
-  border: 2px solid var(--secondary);
-  color: var(--secondary);
-}
-
-
-.part_list_header_button>button:active {
-
-  background-color: var(--accent);
-  border: 2px solid var(--secondary);
-  color: var(--secondary);
-}
-
-#part_search_form {
-  width: 100%;
-  font-size: 0.8em;
-  margin: 10px 0px;
-}
-
-#part_search {
-  width: 100%;
-  border-radius: 2px;
-  border: 2px solid var(--secondary);
-  background-color: transparent;
-  color: var(--text);
-}
-
-.part_details_form {
-  width: 100%;
-  font-size: 0.8em;
-  margin: 1px 0px;
-  padding: 0%;
-}
-
-.part_details_form>label {
-  width: 100%;
-  margin: 0px;
-  text-align: center;
-  font-weight: bold;
-  color: var(--secondary);
-}
-
-.part_details_form>input {
-  width: 100%;
-  padding: 2px;
-  margin: 0px;
-  border-radius: 2px;
-  border: 2px solid var(--secondary);
-  background-color: transparent;
-  color: var(--text);
-  font-weight: bold;
-}
-
-.split {
+  font-size: 24px;
+  font-weight: 500;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  margin: 8px;
+  margin-bottom: 30px;
+
+  &__icon {
+    min-width: 32px;
+  }
+
+  svg {
+    margin-right: 8px;
+  }
 }
 
-.gutter {
-  background-color: #eee;
-  background-repeat: no-repeat;
-  background-position: 50%;
+// -------------- NAVIGATION SEARCH
+
+.navigation-search {
+  $offset: ($navigation-item-height - $navigation-search-icon-size) / 2;
+  margin-bottom: 24px;
+  position: relative;
+  $this: &;
+
+  // -------------- ICON
+
+  &__icon {
+    height: $navigation-search-icon-size;
+    left: $offset;
+    opacity: 1;
+    pointer-events: none;
+    position: absolute;
+    top: $offset;
+    transition: all 0.1s ease-out;
+    width: $navigation-search-icon-size;
+    z-index: 1;
+
+    [class$="--collapsed"] & {
+      left: 12px;
+    }
+  }
+
+  // -------------- INPUT
+
+  &__input {
+    background-color: $navigation-search-background-color;
+    border-radius: $navigation-item-border-radius;
+    border: 0;
+    color: $navigation-search-color;
+    font-family: inherit;
+    font-size: inherit;
+    height: $navigation-item-height;
+    line-height: $navigation-item-height;
+    outline: none;
+    padding-left: $navigation-search-icon-size * 2;
+    transition: all 0.2s ease-out;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+
+    // -------------- CANCEL BUTTON
+
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+      background: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-x' %3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E")
+        no-repeat center center/cover;
+      cursor: pointer;
+      height: 20px;
+      position: relative;
+      right: $offset;
+      width: 20px;
+    }
+
+    [class$="--collapsed"] &:not(:focus)::-webkit-search-cancel-button {
+      display: none;
+    }
+
+    // -------------- FOCUS STYLES
+
+    &:focus {
+      padding-left: $offset;
+      background-color: $navigation-search-background-focus-color;
+      border-radius: $navigation-item-border-radius;
+
+      [class$="--collapsed"] & {
+        width: 250px;
+        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+          0 10px 10px -5px rgba(0, 0, 0, 0.04);
+      }
+
+      + svg {
+        opacity: 0;
+        transform: translateX(-20%);
+        z-index: 2;
+      }
+    }
+  }
 }
 
-.gutter.gutter-horizontal {
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
-  cursor: col-resize;
+// -------------- NAVIGATION LINK
+
+.navigation-link {
+  display: block;
+  color: $navigation-link-color;
+  display: flex;
+  align-items: center;
+  padding: 0 8px;
+  height: $navigation-item-height;
+  line-height: $navigation-item-height;
+  border-radius: $navigation-item-border-radius;
+  text-decoration: none;
+  transition: all 0.2s ease-out;
+  white-space: nowrap;
+  $this: &;
+
+  &__icon {
+    min-width: 32px;
+  }
+
+  &__name {
+    margin-left: 12px;
+
+    // Collapsed state tooltip
+
+    [class$="--collapsed"] & {
+      padding: 0.5em;
+      line-height: 1;
+      border-radius: ceil($navigation-item-border-radius / 2);
+      color: $navigation-item-tooltip-color;
+      transition: transform 0.2s ease-out;
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+      pointer-events: none;
+      position: absolute;
+      left: 48px;
+
+      &::before {
+        width: 0;
+        height: 0;
+        border-top: 5px solid transparent;
+        border-right: 7px solid $white;
+        border-bottom: 5px solid transparent;
+        left: -7px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
+
+  &:hover {
+    background-color: $navigation-link-hover-background-color;
+    color: $white;
+
+    [class$="--collapsed"] & #{$this}__name {
+      position: absolute;
+      opacity: 1 !important;
+      font-size: 0.875rem;
+      transform: translateX(4px);
+      background: $white;
+      left: 60px;
+
+      &::before {
+        content: "";
+      }
+    }
+  }
 }
