--- a/templates/index.html
+++ b/templates/index.html
@@ -11,131 +11,40 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
-  <title>ASRS web controller</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
 
+  <title>ASRS web controller</title>
 </head>
 
 <body>
-  <div class="navigation-container" id="js_navigation-container">
-    <div class="navigation-collapse-trigger">
-      <span class="navigation-collapse-trigger__orb" id="js_navigation-collapse-trigger">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left">
-          <polyline points="15 18 9 12 15 6"></polyline>
-        </svg>
-      </span>
-    </div>
-    <div class="navigation">
-      <!-- LOGO -->
-      <a class="navigation-logo" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box navigation-logo__icon">
-          <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
-          <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
-          <line x1="12" y1="22.08" x2="12" y2="12"></line>
-        </svg>
-        <span class="navigation-logo__name js_navigation-item-name">
-          Productname
-        </span>
-      </a>
-  
-      <!-- SEARCH -->
-      <div class="navigation-search">
-        <input type="search" placeholder="search" class="navigation-search__input" />
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-search__icon">
-          <circle cx="11" cy="11" r="8"></circle>
-          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-        </svg>
-      </div>
-  
-      <!-- NAVIGATION -->
-      <nav role="navigation">
-        <ul>
-          <li>
-            <a class="navigation-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-grid">
-                <rect x="3" y="3" width="7" height="7"></rect>
-                <rect x="14" y="3" width="7" height="7"></rect>
-                <rect x="14" y="14" width="7" height="7"></rect>
-                <rect x="3" y="14" width="7" height="7"></rect>
-              </svg>
-              <span class="navigation-link__name js_navigation-item-name">
-                Dashboard
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="navigation-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-activity">
-                <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
-              </svg>
-              <span class="navigation-link__name js_navigation-item-name">
-                Analytics
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="navigation-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-users">
-                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                <circle cx="9" cy="7" r="4"></circle>
-                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-              </svg>
-              <span class="navigation-link__name js_navigation-item-name">
-                Accounts
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="navigation-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-calendar">
-                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                <line x1="16" y1="2" x2="16" y2="6"></line>
-                <line x1="8" y1="2" x2="8" y2="6"></line>
-                <line x1="3" y1="10" x2="21" y2="10"></line>
-              </svg>
-              <span class="navigation-link__name js_navigation-item-name">
-                Calendar
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="navigation-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-file-text">
-                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                <polyline points="14 2 14 8 20 8"></polyline>
-                <line x1="16" y1="13" x2="8" y2="13"></line>
-                <line x1="16" y1="17" x2="8" y2="17"></line>
-                <polyline points="10 9 9 9 8 9"></polyline>
-              </svg>
-              <span class="navigation-link__name js_navigation-item-name">
-                Documents
-              </span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      
-      <!-- LOGOUT -->
-  
-      <a class="navigation-link logout" href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="navigation-link__icon feather feather-power">
-          <path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path>
-          <line x1="12" y1="2" x2="12" y2="12"></line>
-        </svg>
-        <span class="navigation-link__name js_navigation-item-name">
-          Logout
-        </span>
-      </a>
+
+  <div id="vertical-menu" onmouseover="showMenuTitles()" onmouseleave="hideMenuTitles()">
+    <button type="button" class="menu_button">
+      <img src="../static/images/icons/pogo.png" alt="logo" id="logo" />
+    </button>
+    <button type="button" class="menu_button">
+      <img src="../static/images/icons/home.png" alt="logo" id="home_icon" />
+      <p class = "menu_label">home</p>
+    </button>
+    <button type="button" class="menu_button">
+      <img src="../static/images/icons/inventory.png" alt="logo" id="inventory_icon" />
+      <p class = "menu_label">inventory</p>
+    </button>
+    <button type="button" class="menu_button">
+      <img src="../static/images/icons/categories.png" alt="logo" id="categories_icon" />
+      <p class = "menu_label">categories</p>
+    </button>
+    <button type="button" class="menu_button"><img src="../static/images/icons/settings.png" alt="logo"
+        id="settings_icon" />
+      <p class = "menu_label">settings</p>
+      </button>
+  </div>
+
+  <div class = "mainContent">
+    <div>
+      hi
     </div>
   </div>
-  <div id="vertical-menu">
-    <button type="button" class="" >
-      <img src="../static/images/logo.png" alt="logo" id="logo" /></button>
-    <button type="button" class="" >Inventory</button>
-    <button type="button" class="">Bom Search</button>
-    <button type="button" class="">Settings</button>
-  </div>
-  <div id="subContentContainer"></div>
 
   <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
